# concordance

./: CMakeLists.txt  README.md
src/: FileInput.cpp  FileInput.h  IncrementalAlphabet.h  Outputter.cpp  Outputter.h  SentenceTokenizer.cpp  SentenceTokenizer.h  StringUtils.cpp  StringUtils.h  WordDetails.h  WordMapConstructor.cpp  WordMapConstructor.h  main.cpp
tests/: CMakeLists.txt  FileInputTest.cpp  FileInputTest.h  StringUtilsTests.cpp  TokenizerTest.cpp  WordMapTest.cpp
tests/artifacts/: testInputFile
